fixed div spacing

--- a/about.css
+++ b/about.css
@@ -47,6 +47,7 @@ li a:hover:not(.select) {
 	border: double;
 	height: 700px;
 	width: 10%;
+	margin-right: 30px;
 	background-color: black;
 	opacity: 0.7;
 
@@ -56,7 +57,8 @@ li a:hover:not(.select) {
 	display: inline-block;
 	border: double;
 	height: 700px;
-	width: 80%;
+	width: 70%;
+	margin-right: 30px;
 	background-color: black;
 	opacity: 0.7;
 }
@@ -67,4 +69,5 @@ li a:hover:not(.select) {
 	height: 700px;
 	width: 10%;
 	background-color: black;
+	opacity: 0.7;
 }
